ScooterFuelTracker/android/build_log_utf8.txt

> Configure project :app
WARNING: Using flatDir should be avoided because it doesn't support any meta-data formats.

> Configure project :capacitor-cordova-android-plugins
WARNING: Using flatDir should be avoided because it doesn't support any meta-data formats.

> Task :app:preBuild UP-TO-DATE
> Task :app:preDebugBuild UP-TO-DATE
> Task :app:mergeDebugNativeDebugMetadata NO-SOURCE
> Task :app:javaPreCompileDebug UP-TO-DATE
> Task :capacitor-android:preBuild UP-TO-DATE
> Task :capacitor-android:preDebugBuild UP-TO-DATE
> Task :capacitor-android:writeDebugAarMetadata UP-TO-DATE
> Task :capacitor-app:preBuild UP-TO-DATE
> Task :capacitor-app:preDebugBuild UP-TO-DATE
> Task :capacitor-app:writeDebugAarMetadata UP-TO-DATE
> Task :capacitor-community-background-geolocation:preBuild UP-TO-DATE
> Task :capacitor-community-background-geolocation:preDebugBuild UP-TO-DATE
> Task :capacitor-community-background-geolocation:writeDebugAarMetadata UP-TO-DATE
> Task :capacitor-cordova-android-plugins:preBuild UP-TO-DATE
> Task :capacitor-cordova-android-plugins:preDebugBuild UP-TO-DATE
> Task :capacitor-cordova-android-plugins:writeDebugAarMetadata UP-TO-DATE
> Task :capacitor-geolocation:preBuild UP-TO-DATE
> Task :capacitor-geolocation:preDebugBuild UP-TO-DATE
> Task :capacitor-geolocation:writeDebugAarMetadata UP-TO-DATE
> Task :capacitor-local-notifications:preBuild UP-TO-DATE
> Task :capacitor-local-notifications:preDebugBuild UP-TO-DATE
> Task :capacitor-local-notifications:writeDebugAarMetadata UP-TO-DATE
> Task :app:checkDebugAarMetadata UP-TO-DATE
> Task :app:generateDebugResValues UP-TO-DATE
> Task :capacitor-android:generateDebugResValues UP-TO-DATE
> Task :capacitor-android:generateDebugResources UP-TO-DATE
> Task :capacitor-android:packageDebugResources UP-TO-DATE
> Task :capacitor-app:generateDebugResValues UP-TO-DATE
> Task :capacitor-app:generateDebugResources UP-TO-DATE
> Task :capacitor-app:packageDebugResources UP-TO-DATE
> Task :capacitor-community-background-geolocation:generateDebugResValues UP-TO-DATE
> Task :capacitor-community-background-geolocation:generateDebugResources UP-TO-DATE
> Task :capacitor-community-background-geolocation:packageDebugResources UP-TO-DATE
> Task :capacitor-cordova-android-plugins:generateDebugResValues UP-TO-DATE
> Task :capacitor-cordova-android-plugins:generateDebugResources UP-TO-DATE
> Task :capacitor-cordova-android-plugins:packageDebugResources UP-TO-DATE
> Task :capacitor-geolocation:generateDebugResValues UP-TO-DATE
> Task :capacitor-geolocation:generateDebugResources UP-TO-DATE
> Task :capacitor-geolocation:packageDebugResources UP-TO-DATE
> Task :capacitor-local-notifications:generateDebugResValues UP-TO-DATE
> Task :capacitor-local-notifications:generateDebugResources UP-TO-DATE
> Task :capacitor-local-notifications:packageDebugResources UP-TO-DATE
> Task :app:mapDebugSourceSetPaths UP-TO-DATE
> Task :app:generateDebugResources UP-TO-DATE
> Task :app:mergeDebugResources UP-TO-DATE
> Task :app:packageDebugResources UP-TO-DATE
> Task :app:parseDebugLocalResources UP-TO-DATE
> Task :app:createDebugCompatibleScreenManifests UP-TO-DATE
> Task :app:extractDeepLinksDebug UP-TO-DATE
> Task :capacitor-android:extractDeepLinksDebug UP-TO-DATE
> Task :capacitor-android:processDebugManifest UP-TO-DATE
> Task :capacitor-app:extractDeepLinksDebug UP-TO-DATE
> Task :capacitor-app:processDebugManifest UP-TO-DATE
> Task :capacitor-community-background-geolocation:extractDeepLinksDebug UP-TO-DATE
> Task :capacitor-community-background-geolocation:processDebugManifest UP-TO-DATE
> Task :capacitor-cordova-android-plugins:extractDeepLinksDebug UP-TO-DATE
> Task :capacitor-cordova-android-plugins:processDebugManifest UP-TO-DATE
> Task :capacitor-geolocation:extractDeepLinksDebug UP-TO-DATE
> Task :capacitor-geolocation:processDebugManifest UP-TO-DATE
> Task :capacitor-local-notifications:extractDeepLinksDebug UP-TO-DATE
> Task :capacitor-local-notifications:processDebugManifest UP-TO-DATE
> Task :app:processDebugMainManifest UP-TO-DATE
> Task :app:processDebugManifest UP-TO-DATE
> Task :app:processDebugManifestForPackage UP-TO-DATE
> Task :capacitor-android:compileDebugLibraryResources UP-TO-DATE
> Task :capacitor-android:parseDebugLocalResources UP-TO-DATE
> Task :capacitor-android:generateDebugRFile UP-TO-DATE
> Task :capacitor-app:compileDebugLibraryResources UP-TO-DATE
> Task :capacitor-app:parseDebugLocalResources UP-TO-DATE
> Task :capacitor-app:generateDebugRFile UP-TO-DATE
> Task :capacitor-community-background-geolocation:compileDebugLibraryResources UP-TO-DATE
> Task :capacitor-community-background-geolocation:parseDebugLocalResources UP-TO-DATE
> Task :capacitor-community-background-geolocation:generateDebugRFile UP-TO-DATE
> Task :capacitor-cordova-android-plugins:compileDebugLibraryResources UP-TO-DATE
> Task :capacitor-cordova-android-plugins:parseDebugLocalResources UP-TO-DATE
> Task :capacitor-cordova-android-plugins:generateDebugRFile UP-TO-DATE
> Task :capacitor-geolocation:compileDebugLibraryResources UP-TO-DATE
> Task :capacitor-geolocation:parseDebugLocalResources UP-TO-DATE
> Task :capacitor-geolocation:generateDebugRFile UP-TO-DATE
> Task :capacitor-local-notifications:compileDebugLibraryResources UP-TO-DATE
> Task :capacitor-local-notifications:parseDebugLocalResources UP-TO-DATE
> Task :capacitor-local-notifications:generateDebugRFile UP-TO-DATE
> Task :app:processDebugResources UP-TO-DATE
> Task :capacitor-android:javaPreCompileDebug UP-TO-DATE
> Task :capacitor-android:compileDebugJavaWithJavac UP-TO-DATE
> Task :capacitor-android:bundleLibCompileToJarDebug UP-TO-DATE
> Task :capacitor-app:javaPreCompileDebug UP-TO-DATE
> Task :capacitor-app:compileDebugJavaWithJavac UP-TO-DATE
> Task :capacitor-app:bundleLibCompileToJarDebug UP-TO-DATE
> Task :capacitor-community-background-geolocation:javaPreCompileDebug UP-TO-DATE
> Task :capacitor-community-background-geolocation:compileDebugJavaWithJavac UP-TO-DATE
> Task :capacitor-community-background-geolocation:bundleLibCompileToJarDebug UP-TO-DATE
> Task :capacitor-cordova-android-plugins:javaPreCompileDebug UP-TO-DATE
> Task :capacitor-cordova-android-plugins:compileDebugJavaWithJavac UP-TO-DATE
> Task :capacitor-cordova-android-plugins:bundleLibCompileToJarDebug UP-TO-DATE
> Task :capacitor-geolocation:checkKotlinGradlePluginConfigurationErrors SKIPPED
> Task :capacitor-geolocation:compileDebugKotlin UP-TO-DATE
> Task :capacitor-geolocation:javaPreCompileDebug UP-TO-DATE
> Task :capacitor-geolocation:compileDebugJavaWithJavac NO-SOURCE
> Task :capacitor-geolocation:bundleLibCompileToJarDebug UP-TO-DATE
> Task :capacitor-local-notifications:javaPreCompileDebug UP-TO-DATE
> Task :capacitor-local-notifications:compileDebugJavaWithJavac UP-TO-DATE
> Task :capacitor-local-notifications:bundleLibCompileToJarDebug UP-TO-DATE

> Task :app:compileDebugJavaWithJavac FAILED
.\gradlew.bat : G:\my work\
MyRestoredProjects\gymnasti
c-system-1\ScooterFuelTrack
er\android\app\src\main\jav
a\com\scooterfuel\tracker\M
ainActivity.java:127: 
error: method openAppSettin
gs(PluginCall) is already 
defined in class 
AlarmPlugin
At line:1 char:77
+ ... \jbr" ; cd android ; 
.\gradlew.bat 
assembleDebug > 
build_log.txt 2>&1
+                          
~~~~~~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo         
     : NotSpecified: (G:\  
  my work\MyRe...ass Ala   
 rmPlugin:String) [], R    
emoteException
    + FullyQualifiedErrorI 
   d : NativeCommandError
 
        public void 
openAppSettings(PluginCall 
call) {
                    ^
G:\my work\MyRestoredProjec
ts\gymnastic-system-1\Scoot
erFuelTracker\android\app\s
rc\main\java\com\scooterfue
l\tracker\MainActivity.java
:117: error: cannot find 
symbol
                call.reject
(e.getMessage());
                           
 ^
  symbol:   variable e
  location: class 
AlarmPlugin
Note: G:\my work\MyRestored
Projects\gymnastic-system-1
\ScooterFuelTracker\android
\app\src\main\java\com\scoo
terfuel\tracker\MainActivit
y.java uses or overrides a 
deprecated API.
Note: Recompile with 
-Xlint:deprecation for 
details.
2 errors
[Incubating] Problems report is available at: file:///G:/my%20work/MyRestoredProjects/gymnastic-system-1/ScooterFuelTracker/android/build/reports/problems/problems-report.html

FAILURE: Build failed with 
an exception.

* What went wrong:
Execution failed for task '
:app:compileDebugJavaWithJa
vac'.
> Compilation failed; see 
the compiler output below.
  Note: Recompile with 
-Xlint:deprecation for 
details.
  G:\my work\MyRestoredProj
ects\gymnastic-system-1\Sco
oterFuelTracker\android\app
\src\main\java\com\scooterf
uel\tracker\MainActivity.ja
va:127: error: method openA
ppSettings(PluginCall) is 
already defined in class 
AlarmPlugin
          public void 
openAppSettings(PluginCall 
call) {
                      ^
  Note: G:\my work\MyRestor
edProjects\gymnastic-system
-1\ScooterFuelTracker\andro
id\app\src\main\java\com\sc
ooterfuel\tracker\MainActiv
ity.java uses or overrides 
a deprecated API.
  G:\my work\MyRestoredProj
ects\gymnastic-system-1\Sco
oterFuelTracker\android\app
\src\main\java\com\scooterf
uel\tracker\MainActivity.ja
va:117: error: cannot find 
symbol
                  call.reje
ct(e.getMessage());
                           
   ^
    symbol:   variable e
    location: class 
AlarmPlugin
  2 errors

* Try:
> Check your code and 
dependencies to fix the 
compilation error(s)
> Run with --scan to get 
full insights.

BUILD FAILED in 2s
87 actionable tasks: 1 executed, 86 up-to-date
